[package]
name = "digs"
version = "0.4.0"
authors = ["azzamsa <azzam@biznetgio.com>"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = ["/README.md"]
keywords = ["cli", "dns", "dig"]
license = "MIT"
repository = "https://github.com/BiznetGIO/digs"
rust-version = "1.76.0"
description = "digs many at once"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
hickory-client = "0.24.0"

clap = { version = "4.5.1", features = ["suggestions", "color", "cargo", "derive"] }
log = "0.4.20"
miette = { version = "7.1.0", features = ["fancy"] }
owo-colors = "4.0.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
toml = "0.8.10"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
