[package]
name = "digs"
version = "0.4.2"
authors = ["azzamsa <azzam@biznetgio.com>"]
categories = ["command-line-utilities"]
edition = "2024"
exclude = ["/README.md"]
keywords = ["cli", "dns", "dig"]
license = "MIT"
repository = "https://github.com/BiznetGIO/digs"
rust-version = "1.96.0"
description = "digs many at once"

[profile.release]
opt-level = 'z' # Optimize for size.
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
hickory-client = "0.25.2"

clap = { version = "4.6.1", features = ["suggestions", "color", "cargo", "derive"] }
log = "0.4.33"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.52.3"
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
predicates = "3.1.4"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version}-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["mise", "release:prepare", "{{version}}"]
